# game-of-life

./: .gitignore  .gitmodules  .travis.yml  Cargo.toml  Makefile  README.md
src/: life.rs
