[package]

name = "game-of-life"
version = "0.1.0"
authors = [
    "Arcterus <arcterus@mail.com>",
    "indiv0 <contact@nikitapek.in>"
]

[[bin]]

name = "life"
path = "src/life.rs"

[dependencies]
piston = "0.31.1"
piston2d-graphics = "0.21.1"
pistoncore-glutin_window = "0.35.0"
piston2d-opengl_graphics = "0.42.0"
