[package]

name = "game-of-life"
version = "0.1.0"
authors = [
    "Arcterus <arcterus@mail.com>",
    "indiv0 <contact@nikitapek.in>"
]

[[bin]]

name = "life"
path = "src/life.rs"

[dependencies]
piston = "0.35.0"
piston2d-graphics = "0.24.0"
pistoncore-glutin_window = "0.43.0"
piston2d-opengl_graphics = "0.50.0"
clap = "2.29.2"