[package]
name = "game-of-life"
description = "An implementation of Conway's Game of Life using Piston."
version = "0.1.0"
authors = [
    "Arcterus <arcterus@mail.com>",
    "indiv0 <contact@nikitapek.in>"
]
homepage = "https://github.com/Arcterus/game-of-life"
repository = "https://github.com/Arcterus/game-of-life"
readme = "README.md"
keywords = ["life", "conway", "game", "automaton", "cellular"]
categories = ["games", "simulation"]
license = "MPL-2.0"

[badges]
travis-ci = { repository = "Arcterus/game-of-life" }

[[bin]]
name = "life"
path = "src/life.rs"

[features]
random = []

[dependencies]
piston = "0.35.0"
piston2d-graphics = "0.24.0"
pistoncore-glutin_window = "0.43.0"
piston2d-opengl_graphics = "0.50.0"
clap = "2.29.2"
fps_counter = "1.0.0"
fnv = "1.0.3"